KAFKA-17541